# work_test

motion_control/: CMakeLists.txt  scp.sh
motion_control/cmake/: buildprotofiles.cmake  common.cmake  pack2deb.cmake
motion_control/include/: config.h  modbus.h  modbus_base.h  modbus_manager.h  robot_motion.h  rs485.h  singleton.h
motion_control/include/lib_demo/: dev_log.h  log.h
motion_control/lib/: libyaml-cpp.so.0.5
motion_control/src/: main.cpp  modbus_mode.cpp  robot_motion.cpp
